--- a/src/main/resources/templates/EmailCode.html
+++ b/src/main/resources/templates/EmailCode.html
@@ -147,7 +147,7 @@
                 <div id="content_top">
                     <strong>尊敬的用户：您好！</strong>
                     <strong>
-                        您正在进行<span>轻语阁验证</span>操作，请在验证码中输入以下验证码完成操作：
+                        您正在进行<span>轻语阁验证</span>操作，请在验证码中输入以下验证码完成操作, 有效期五分钟：
                     </strong>
                     <div id="verificationCode">
                         <button class="button" th:each="a:${verifyCode}">[[${a}]]</button>
